# demeter

./: Demeter.csproj  Program.cs  README.md  Startup.cs
ClientApp/: package-lock.json  package.json
ClientApp/public/: index.html  manifest.json
ClientApp/src/components/: NavMenu.js
Controllers/: RecipeController.cs  UserController.cs  WeatherForecastController.cs
Demeter/: .gitignore  Cargo.toml  README.md  generate_rocket_toml.py
Demeter/migrations/2020-09-18-214558_base_db/: down.sql  up.sql
Demeter/src/: db.rs  error.rs  main.rs  schema.rs
Demeter/src/controllers/: tokens.rs  users.rs
Demeter/src/models/: models.rs  recipes.rs  tokens.rs  users.rs
Models/: Database.cs
Pages/: Error.cshtml.cs  _ViewImports.cshtml
Properties/: launchSettings.json
Types/: Recipe.cs  User.cs  WeatherForecast.cs
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.css  App.js  api.js  index.css  index.js  semantic.cyborg.min.css  semantic.darkly.min.css
client/src/components/: recipe-display.js  recipe-selector.js  sign-in-modal.js
client/src/css/: create-user.css  login.css
client/src/pages/: create-user.js  home.js  login.js  recipe.js  user.js
