[package]
name = "demeter"
version = "0.1.0"
authors = ["kyle o'neill <kyleoneill24@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
diesel = { version = "1.4.4", features = ["sqlite"] }
dotenv = "0.15.0"
base64 = "0.12.3"
rand = "0.7.3"
sha2 = "0.9.1"
chrono = "0.4.15"
rocket_contrib = { version = "0.4", default-features = false, features = ["diesel_sqlite_pool", "json"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "0.8", features = ["v4"] }